chore(build): modernize build system and CI configuration